themes/SuiteP/css/style.css
/* ... */
@media (max-width: 1500px) {
    .sidebar {
        width: 18%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 18%;
    }

    .col-md-10 {
        width: 82%;
    }

    .button-toggle-expanded {
        left: 18%;
    }

    .button-toggle-collapsed {
        left: 0%;
    }

    footer.expandedSidebar {
        width: 76%;
    }

}

@media (max-width: 1400px) {
    .sidebar {
        width: 18%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 18%;
    }

    .col-md-10 {
        width: 82%;
    }

    .button-toggle-expanded {
        left: 18%;
    }

    .button-toggle-collapsed {
        left: 0%;
    }

    #content {
        width: 99%;
        margin-left: 1%;
    }
}

@media (max-width: 1300px) {

    .sidebar {
        width: 20%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 20%;
    }

    .col-md-10 {
        width: 80%;
    }

    .button-toggle-expanded {
        left: 20%;
    }

    .button-toggle-collapsed {
        left: 0%;
    }

    footer.expandedSidebar {
        width: 74%;
    }

}

@media (max-width: 1200px) {
    #bootstrap-container.expandedSidebar .dashletcontainer {
        display: block;
        float: left;
        width: 100%;
    }
}


@media (max-width: 750px) {

    #bootstrap-container {
        margin-top: 110px !important;
    }

    div.p_login .p_login_top {
        padding: 10px 3% 10px 3%;
    }

    div.p_login .p_login_top a {
        height: 30px;
        width: 170px;
        background-image: none, url("../../../../themes/SuiteP/images/p_login_logo.svg"), url("../../../../themes/SuiteP/images/p_login_logo.png");
        background-position: 0 -70px;
    }

    div.p_login .p_login_bottom {
        padding-top: 10px;
        padding: 10px 3% 10px 3%;
    }

    div.p_login .p_login_bottom a#powered_by, div.p_login .p_login_bottom a#admin_options {
        font-size: 10px;
        margin-left: 0px;
        text-align: center;
        display: block;
    }

    div.p_login .p_login_bottom a#admin_options {
        margin-bottom: 5px;
    }

    .modulename {
        line-height: 60px;
    }

    .navbar-toggle {
        height: 60px;
    }

    #mobile_menu {
        z-index: 65530;
        top: 60px;
        left: 20px;
    }

    #quickcreatetop {
        margin-top: 10px;
    }

    #quickcreatetop a {
        padding: 5px 32px 5px 12px;
        background-color: #a2b2bf;
        background-position: 80px -5px;
    }

    #quickcreatetop a:hover {
        background-position: 80px -5px;
    }

    #search {
        position: relative;
        min-height: 28px;
    }

    #search > div.dropdown-menu {
        top: -64px;
        right: -112px;
        bottom: auto;
        left: auto;
        width: auto;
        clear: both;
    }

    #search .dropdown-menu,
    #search #searchformdropdown .input-group {
        width: 100%;
    }

    #search #query_string {
        top: 0px;
        right: 0px;
        bottom: auto;
        left: 0px;
        padding-top: 0px;
        padding-bottom: 0px;
        margin: 0px;
        width: 80% !important;
    }

    #search #searchbutton {
        margin: 0px 10px 0 0;
        background-color: transparent;
        border: none;
        background-image: none, url("../../../../themes/SuiteP/images/p_search_button_small.svg"), url("../../../../themes/SuiteP/images/p_search_button_small.png");
        background-repeat: no-repeat;
        background-position: 0px 10px;
        text-indent: -9999px;
        overflow: hidden;
        padding: 12px 0px 12px 0px;
        width: 28px;
        height: 40px!important;
    }

    #search.open #searchbutton {
        background-position: 0px -60px;
        background-color: transparent;
    }

    #quickcreatetop ul.dropdown-menu {
        left: 0px;
    }

    #usermenucollapsed {
        border: none;
        border-radius: 0;
        background-color: transparent;
        height: 28px;
        margin-top: 0px;
        width: 28px;
        background-image: none, url("../../../../index.php?entryPoint=getImage&themeName=SuiteP&imageName=p_user_icon_small.svg"), url("../../../../index.php?entryPoint=getImage&themeName=SuiteP&imageName=p_user_icon_small.png");
        background-repeat: no-repeat;
        background-position: 0 0;
    }


    #desktop_notifications, #desktop_notifications:hover {
        float: left;
        width: 28px;
        height: 28px;
        margin-top: 9px;
        margin-right: 20px;
        background-image: none, url("../../../../themes/SuiteP/images/p_icon_alert_small.svg"), url("../../../../themes/SuiteP/images/p_icon_alert_small.png");
        background-repeat: no-repeat;
        background-position: 0px 0px;
    }



}
/* ... */

